# zrun-rs

./: Cargo.toml  README.md
.github/workflows/: zbuilder.yml
src/: app.rs  cli.rs  config.rs  fuzzy.rs  history.rs  main.rs  scripts.rs
