[package]
name = "zrun"
version = "1.2.1"
edition = "2024"
description = "A fast, polished TUI script launcher"

[dependencies]
ratatui    = "0.30"
crossterm  = "0.29"
clap       = { version = "4.6.1", features = ["derive", "color"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "1.1.2+spec-1.1.0"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"